RESOLVED FIXED127851
IDB: Opening an existing database is broken
https://bugs.webkit.org/show_bug.cgi?id=127851
Summary IDB: Opening an existing database is broken
Brady Eidson
Reported 2014-01-29 12:36:57 PST
IDB: Opening an existing database is broken This is due to both WebCore IDBDatabaseBackend logic issues and the WebKit2 SQLite backend incorrectly retrieving object store metadata.
Attachments
Patch v1 (6.64 KB, patch)
2014-01-29 12:39 PST, Brady Eidson
timothy: review+
Brady Eidson
Comment 1 2014-01-29 12:39:57 PST
Created attachment 222590 [details] Patch v1
Brady Eidson
Comment 2 2014-01-29 13:11:26 PST
Note You need to log in before you can comment on or make changes to this bug.